fix: truncate class max-with

--- a/packages/client/src/sass/components/_font.scss
+++ b/packages/client/src/sass/components/_font.scss
@@ -130,5 +130,5 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  max-width: 150px;
+  // max-width: 150px;
 }
